// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePickerBody should be rendered with maximum props 1`] = `
<div
  className="root uui-timepicker-container"
>
  <div
    className="ltrAlways"
  >
    <div
      className="uui-timepicker-item"
    >
      <div
        aria-label="Increment hours"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
      <div
        className="container uui-input-box -clickable uui-timepicker-input"
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input align-undefined uui-value-in-placeholder"
          inputMode="numeric"
          max={12}
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="12"
          tabIndex={0}
          type="number"
          value=""
        />
        <div
          className="uui-numeric-input-button-group"
        >
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
        </div>
      </div>
      <div
        aria-label="Decrement hours"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
    </div>
    <div
      className="uui-timepicker-item"
    >
      <div
        aria-label="Increment minutes"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
      <div
        className="container uui-input-box -clickable uui-timepicker-input"
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input align-undefined uui-value-in-placeholder"
          inputMode="numeric"
          max={59}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="30"
          tabIndex={0}
          type="number"
          value=""
        />
        <div
          className="uui-numeric-input-button-group"
        >
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
        </div>
      </div>
      <div
        aria-label="Decrement minutes"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
    </div>
  </div>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
        height={18}
        width={18}
      />
    </div>
    <div
      className="container uui-input-box uui-readonly uui-timepicker-input"
      onFocus={[Function]}
      tabIndex={-1}
    >
      <input
        className="uui-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={-1}
        type="text"
        value="PM"
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
        height={18}
        width={18}
      />
    </div>
  </div>
</div>
`;

exports[`TimePickerBody should be rendered with minimum props 1`] = `
<div
  className="root uui-timepicker-container"
>
  <div
    className="ltrAlways"
  >
    <div
      className="uui-timepicker-item"
    >
      <div
        aria-label="Increment hours"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
      <div
        className="container uui-input-box -clickable uui-timepicker-input"
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input align-undefined uui-value-in-placeholder"
          inputMode="numeric"
          max={12}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="12"
          tabIndex={0}
          type="number"
          value=""
        />
        <div
          className="uui-numeric-input-button-group"
        >
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
        </div>
      </div>
      <div
        aria-label="Decrement hours"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
    </div>
    <div
      className="uui-timepicker-item"
    >
      <div
        aria-label="Increment minutes"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
      <div
        className="container uui-input-box -clickable uui-timepicker-input"
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <input
          className="uui-input align-undefined uui-value-in-placeholder"
          inputMode="numeric"
          max={59}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="30"
          tabIndex={0}
          type="number"
          value=""
        />
        <div
          className="uui-numeric-input-button-group"
        >
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
          <div
            className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
            onClick={[Function]}
            role="button"
            style={Object {}}
          />
        </div>
      </div>
      <div
        aria-label="Decrement minutes"
        className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={18}
          width={18}
        />
      </div>
    </div>
  </div>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
        height={18}
        width={18}
      />
    </div>
    <div
      className="container uui-input-box uui-readonly uui-timepicker-input"
      onFocus={[Function]}
      tabIndex={-1}
    >
      <input
        className="uui-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={-1}
        type="text"
        value="PM"
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
        height={18}
        width={18}
      />
    </div>
  </div>
</div>
`;
